--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,10 @@ html {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 h1,
@@ -49,3 +53,47 @@ ol {
 .custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: #D9D9D9;
 }
+
+.content {
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* Две равные колонки */
+  grid-template-rows: auto;
+  grid-template-areas:
+    "result details";
+  align-items: end; /* Прижимаем элементы к нижней границе */
+  gap: 30px; /* Отступы между элементами */
+  width: 100%;
+  max-width: 1140px;
+}
+
+.result {
+  grid-area: result;
+}
+
+.result__video {
+  width: 711px;
+}
+
+.content__details {
+  grid-area: details;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  width: 399px;
+}
+
+.search-form {
+  display: flex;
+  justify-content: flex-start;
+  gap: 40px;
+}
+.search-form__fieldset {
+  flex: 1; /* Равномерное распределение */
+}
+
+.content__list-container {
+  height: 300px; /* Фиксируем высоту */
+  overflow-y: auto;
+}
+
