--- a/styles/style.css
+++ b/styles/style.css
@@ -132,14 +132,14 @@ ol {
 .search-form__label {
   display: flex;
   width: fit-content;
-  gap: 6px;
+  gap: 5px;
   cursor: pointer;
   justify-content: center;
   align-items: center;
 }
 
 .search-form__textfield {
-  width: 225px;
+  width: 220px; /* ? */
   border: 1px solid #fff; 
   border-left-width: 0;
   border-right-width: 0;
@@ -219,7 +219,7 @@ ol {
 }
 
 .title {
-  padding-bottom: 30px;
+  padding-bottom: 26px;
   color: #fff;
   font-family: Oswald, sans-serif;
   font-weight: 700;
@@ -306,7 +306,7 @@ ol {
   font-weight: 700;
   cursor: pointer;
   padding: 6px;
-  transition: background-color 0.2s ease-in-out 0.5s, color 0.5s ease-in-out 0.2s;
+  transition: background-color 0.2s ease-in-out, color 0.5s ease-in-out;
 }
 
 /* Индивидуальные стили для кнопки "Найти" */
@@ -353,12 +353,11 @@ ol {
   margin: 0;
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
 }
 
 /* Отступы для карточек */
 .content__list-item {
-  padding: 3px; 
+  padding: 1px; 
 }
 
 /* Основные стили карточки */
@@ -409,6 +408,6 @@ ol {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(0, 0, 0, 0.5); 
+  background: rgba(0, 0, 0, 0.7); 
   z-index: 10;
 }
