--- a/styles/style.css
+++ b/styles/style.css
@@ -279,6 +279,7 @@ ol {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
+  line-clamp: 3;
   font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   line-height: 16.2px;
